2003-02-05 Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* README.Qtopia: few changes to match the current compile method
	* configure.in: reverted the zaurus/embeddix $host_vendor variable
	
2003-01-27  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: When resurrecting, set schedule to something reasonable.

2002-12-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* keyactions.cc: fixed crash in alternate SI intro
	* sigame.cc: fixed wrong char* initializer (Philipp Thomas <pthomas@suse.de>)

2002-12-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Spellbook_gump.cc (public): Bookmark always shows, and
	clicking on it gets you back to its page.

2002-11-26  Jeff Freedman  <jeff@amy.nerble.net>

	* CombatOptions_gump.cc:  Added "Combat" menu.

2002-11-23  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: When combat is paused, you can direct a party member
	by right-clicking, then clicking on a target to attack.

	* combat.cc,keys.cc,etc.:  Suspend/resume combat (space key).
	* combat.h (public): Combat class with options.
	* actors.cc:  Optionally show hits on screen.

2002-11-22  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc (Game_window): Don't show new screen res. if in gump mode.
	* gumps/Gump_manager.cc: Paint at start of do_modal_gump().  The
	back-saving is no longer needed.

2002-11-21  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Spellbook_gump.cc (Spellbook_gump): Use correct font so
	that the circles and spell-counts get palette animation.
	(Spellbook_gump): Show turning page (what a pain!)

2002-11-09  Dancer Vesperman <dancer@users.sourceforge.net>
	* configure.in: --enable-mmx	(default: off)
	* configure.in: --enable-3dnow (default: off)
	* vec.h: Explanatory comment.

2002-11-09  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: For theft, see if NPC is facing Avatar.
	* objs/objs.cc: get_dir_facing().

2002-11-08  Jeff Freedman  <jeff@amy.nerble.net>
